@@ -311,6 +311,10 @@ int mqtt3_net_read(mqtt3_context *context)
 		if(read_length == 1){
 			bytes_received++;
 			context->in_packet.command = byte;
+#ifdef WITH_BROKER
+			/* Clients must send CONNECT as their first command. */
+			if(context->connected == false && (byte&0xF0) != CONNECT) return 1;
+#endif
 		}else{
 			if(read_length == 0) return 1; /* EOF */
 			if(errno == EAGAIN || errno == EWOULDBLOCK){
